# HiClaw

./: AGENTS.md  Makefile
.github/workflows/: push-controller-only.yml  push-manager-copaw.yml  push-to-lingbohome.yml
changelog/: current.md
copaw/: Dockerfile
copaw/scripts/: copaw-worker-entrypoint.sh
copaw/src/copaw_worker/: cli.py  config.py  sync.py  task.py  worker.py
docs/: declarative-resource-management.md  manager-guide.md
docs/zh-cn/: declarative-resource-management.md  manager-guide.md
hack/: local-k8s-up.sh
helm/hiclaw/: values.yaml
helm/hiclaw/crds/: humans.hiclaw.io.yaml
helm/hiclaw/templates/: _helpers.tpl
hermes/: Dockerfile
hermes/src/hermes_worker/: sync.py
hiclaw-controller/: Dockerfile
hiclaw-controller/api/v1beta1/: types.go
hiclaw-controller/cmd/hiclaw/: apply.go  create.go  get.go  update.go  worker_cmd.go
hiclaw-controller/config/crd/: teams.hiclaw.io.yaml  workers.hiclaw.io.yaml
hiclaw-controller/internal/accessresolver/: defaults.go  resolver.go  resolver_test.go
hiclaw-controller/internal/app/: app.go
hiclaw-filesync/: pyproject.toml
hiclaw-filesync/src/hiclaw_filesync/: __init__.py  cli.py
hiclaw-taskflow/: pyproject.toml
hiclaw-taskflow/src/hiclaw_taskflow/: __init__.py  cli.py  plan.py  sync.py
hiclaw-taskflow/tests/: test_plan.py
install/: hiclaw-install.ps1  hiclaw-install.sh
manager/agent/: AGENTS.md  HEARTBEAT.md
openclaw-base/: Dockerfile
openhuman/: Dockerfile
openhuman/scripts/: openhuman-worker-entrypoint.sh
worker/: Dockerfile
worker/scripts/: worker-entrypoint.sh
(+84 files in other folders)
