[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiclaw-taskflow"
version = "0.1.0"
description = "Shared taskflow CLI for HiClaw workers — plan.md management, task submit, step marking"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    # Pure stdlib — no external dependencies
]

[project.urls]
Homepage = "https://github.com/lingbohome/HiClaw"
Repository = "https://github.com/lingbohome/HiClaw"

[project.scripts]
hiclaw-taskflow = "hiclaw_taskflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
